--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,6 @@ dependencies {
     implementation "io.awspring.cloud:spring-cloud-aws-starter:3.0.1"
     implementation "io.awspring.cloud:spring-cloud-aws-starter-s3:3.0.1"
     implementation "io.awspring.cloud:spring-cloud-aws-starter-ses:3.0.1"
-    implementation "io.awspring.cloud:spring-cloud-aws-starter-parameter-store:3.0.1"
     implementation "ca.pjer:logback-awslogs-appender:1.6.0" // CloudWatch Logging with Logback
 
     // Redis
@@ -71,7 +70,7 @@ dependencies {
     runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.5"
     runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.5"
 
-    // Monitoring (Prometheus + Grafana & Pinpoint)
+    // Monitoring
     implementation "org.springframework.boot:spring-boot-starter-actuator"
     runtimeOnly "io.micrometer:micrometer-registry-prometheus"
 
